--- a/src/demo/App.css
+++ b/src/demo/App.css
@@ -21,3 +21,31 @@ a {
 a:hover {
 	text-decoration: underline;
 }
+
+textarea {
+	width: 610px;
+  left:57%;
+  top:169%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  padding:15px;
+  height:180px;
+  font-family: 'Cousine', sans-serif;
+  font-weight: 100;
+  color:rgb(78, 78, 78);
+  resize: none;
+  border:none;
+  border-left: 40px solid #E8E8E8;
+  border-radius: 5px;
+  box-shadow:0px 2px 26px -3px rgba(0,0,0,0.15);
+  transition: box-shadow 0.2s, left 0.5s;
+}
+
+textarea:hover{
+  box-shadow:0px 2px 26px -3px rgba(0,0,0,0.35);
+}
+
+textarea:focus{
+  box-shadow:0px 2px 26px -3px rgba(0,0,0,0.40);
+  left:61%;
+}
